# clank-discord-bot-reworked

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
core/: bot.py  logging_setup.py
core/db/: base.py
utils/: extension_finder.py
