[project]
name = "clank-discord-bot-reworked"
version = "1.0.0"
requires-python = ">=3.14"


#                       LINTING (RUFF & MYPY)

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (Import-Sortierung)
    "UP",  # pyupgrade (moderne Syntax)
    "B",   # flake8-bugbear (häufige Fehlerquellen)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.14"
files = ["core", "features", "system", "misc", "utils", "main.py"]
exclude = ["tests/", "venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


#                       TESTING-STUFF

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["core", "features", "system", "misc", "utils"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]